# script-test-radar

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  install_and_run.sh  pyproject.toml  requirements.txt  run_analysis.py  setup.sh  test_config.example.json  test_run.py
src/: __init__.py  main.py
src/analyzer/: __init__.py  llm_analyzer.py
src/core/: __init__.py  config.py  exceptions.py  logger.py
src/executor/: __init__.py  executor.py
src/reporter/: __init__.py  reporter.py
src/scanner/: __init__.py  scanner.py
test_samples/: test_api.py  test_calculator.py
