[tool.poetry]
name = "test-radar"
version = "0.1.0"
description = "Sistema inteligente de pruebas unitarias con detección y corrección de errores"
authors = ["Roo <roo@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11.11"
pytest = "^7.4.0"
coverage = "^7.3.0"
mypy = "^1.5.0"
pylint = "^2.17.0"
pydantic = "^2.0.0"
colorlog = "^6.7.0"
rich = "^13.7.0"
click = "^8.1.0"
boto3 = "^1.34.0"
botocore = "^1.34.0"
aws-lambda-powertools = "^2.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.poetry.scripts]
test-radar = "src.main:main"